# app/controllers/api/v1/users_controller.rb
@@ -1,8 +1,10 @@
 module Api
   module V1
     class UsersController < ApiController
+      skip_before_action :authenticate!, only: [:create]
+
       def create
-        @user = User.new(user_params)
+        @user = User.new(create_params)
         if @user.valid?
             @user.save
         else
@@ -10,9 +12,17 @@ module Api
         end
       end
 
+      def update
+        current_user.update!(update_params)
+      end
+
       private
-      def user_params
+      def create_params
         params.require(:user).permit(:name, :self_introduction, :website_url, :avatar)
+      end
+
+      def update_params
+        params.require(:user).permit(:id, :name, :self_introduction, :website_url, :avatar)
       end
     end
   end
